@@ -5,6 +5,14 @@
 	
 	* term/win.trm: Update documentation accordingly.
 
+2010-02-15  Benjamin Lindner  <lindnerb@users.sourceforge.net>
+
+	* src/win/wgraph.c src/win/wresourc.h: Add the possibility to
+	save the current graph window as EMF file. Add a Ctrl+S shortcut for
+	the graph window and add an entry to the window's system menu.
+	
+	* term/win.trm: Update documentation accordingly.
+
 2010-02-12  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* src/set.c (set_obj): Sanity check start and end angles of arc.
